apps/wallabag/networkpolicies/egress-wallabag.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-wallabag
  namespace: wallabag
spec:
  selector: app == 'wallabag'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
