apps/wallabag/networkpolicies/ingress-wallabag.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-wallabag
  namespace: wallabag
spec:
  selector: app == 'wallabag'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 80
