apps/wallabag/networkpolicies/nginx-egress-wallabag.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-wallabag
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: wallabag
            namespace: wallabag
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
