apps/wallabag/networkpolicies/traefik-egress-wallabag.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-wallabag
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: wallabag
            io.kubernetes.pod.namespace: wallabag
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
