apps/wallabag/networkpolicies/wallabag-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: wallabag-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'wallabag'
        selector: app == 'wallabag'
        ports:
          - 80
